src/test/deca/context/invalid/created/FLOAT_assign_no_identifier.deca
{
    float = 6.3;
}